src/objects/Formula__c.object
<CustomObject>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Link_Description__c</fullName>
        <label>Formula/Link Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Formula</label>
    <nameField>
        <label>Formula Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>